--- a/login/login page.html
+++ b/login/login page.html
@@ -91,8 +91,8 @@
         <div class="box">
             <input type="password" name="password" id="password" placeholder="Enter Your Password">
         </div>
-        <button class="btn1"><a href="project1.html">Signup</a> </button>
-        <button class="btn2"><a href="project1.html">Sign in</a> </button>
+        <button class="btn1"><a href="../index.html">Signup</a> </button>
+        <button class="btn2"><a href="../index.html">Sign in</a> </button>
     </div>
 
 </body>
