--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: 'Merriweather', serif;
             margin: 0px;
             padding: 0px;
-            background-image: url('pexels-gustavo-fring-4173251.jpg');
+            background-image: url('./image/pexels-gustavo-fring-4173251.jpg');
         }
         header{
             display: flex;
@@ -112,7 +112,7 @@
     <header class="header">
         <!-- left box for logo -->
         <div class="left">
-            <img src="doctor-logo-49391.png" alt="">
+            <img src="./image/doctor-logo-49391.png" alt="">
             <div>Need helps</div>
         </div>
         <!-- mid box for navbar -->
