--- a/login/login page.html
+++ b/login/login page.html
@@ -8,7 +8,7 @@
     <title>Login page</title>
     <style>
         body {
-            background: url("doctorimg.png");
+            background: url("../image/doctorimg.png");
             background-repeat: no-repeat;
             background-color: rgb(246, 132, 250);
     
